--- a/inst/html/help.html
+++ b/inst/html/help.html
@@ -10,9 +10,9 @@ I also tried to find and extract a README file from each supplement. Most README
 </p><p>
 The underlying database contains information about articles and data supplements collected for the <a href="https://www.aeaweb.org/journals/" target="_blank">AEA journals</a> (including the American Economic Review, Journal of Economic Perspectives, AEA Policy, ...), the <a href="https://academic.oup.com/restud/" target="_blank">Review of Economic Studies</a>, and the <a href="https://www.mitpressjournals.org/loi/rest" target="_blank">Review of Economic and Statistics</a>.
 </p><p>
-There are also small samples from the QJE, JPE and JAERE who for a long time did not seem to have such effective data availability policies than the other journals mentioned above.
+There are also small samples from the <a href="https://academic.oup.com/qje" target="_blank">QJE</a>, the <a href="https://www.journals.uchicago.edu/toc/jpe/current" target="_blank">JPE</a> and the <a href="https://www.journals.uchicago.edu/toc/jaere/current" target="_blank">JAERE</a>. I guess these samples get larger if data availability policies become similar effective as those of the AEA journals.
 </p><p>
-If you want to analyse yourself the collected data, you can download the zipped Sqlite databases using the following links:
+If you want to analyse yourself the collected data, you can download the zipped SQLite databases using the following links:
 <ul>
 <li>
 Main database (should suffices for most analyses):<br><a href="http://econ.mathematik.uni-ulm.de/ejd/articles.zip">http://econ.mathematik.uni-ulm.de/ejd/articles.zip</a>
