--- a/inst/html/about.html
+++ b/inst/html/about.html
@@ -3,6 +3,12 @@
 <p>
 This is an R <a href="https://shiny.rstudio.com/" target="_blank">Shiny</a> app to search for economic articles that have provided data and code for replication purposes.
 </p>
+<!--
+<p>
+If you search for replications studies or want to enter replication studies, take a look at the <a href="https://replication.uni-goettingen.de/wiki/index.php/Main_Page" target="_blank">Replication Wiki</a> instead.
+</p>
+-->
+
 <p>
 The main feature is a keyword search in the article's titles and abstracts. It returns a list with links to the articles on their journal websites and some estimates of the sizes of data files and relevant code files. By default only articles are included that have a data or code supplement.
 </p>
@@ -13,7 +19,7 @@ I also tried to find and extract a README file from each supplement. Most README
 </p><p>
 The underlying database contains information about articles and data supplements collected for the <a href="https://www.aeaweb.org/journals/" target="_blank">AEA journals</a> (including the American Economic Review, Journal of Economic Perspectives, AEA Policy, ...), the <a href="https://academic.oup.com/restud/" target="_blank">Review of Economic Studies</a>, and the <a href="https://www.mitpressjournals.org/loi/rest" target="_blank">Review of Economic and Statistics</a>.
 </p><p>
-There are also small samples from the <a href="https://academic.oup.com/qje" target="_blank">QJE</a>, the <a href="https://www.journals.uchicago.edu/toc/jpe/current" target="_blank">JPE</a>,<a href="https://www.journals.uchicago.edu/toc/jpe/current" target="_blank">JPE</a>, <a href="https://academic.oup.com/jeea/" targe="_blank">JEEA</a>, <a href="https://onlinelibrary.wiley.com/journal/14680262" targe="_blank">Econometrica</a> and the <a href="https://www.journals.uchicago.edu/toc/jaere/current" target="_blank">JAERE</a>. I guess these samples get larger if data availability policies become similar effective as those of the AEA journals.
+There are also smaller samples from the <a href="https://academic.oup.com/qje" target="_blank">QJE</a>, the <a href="https://www.journals.uchicago.edu/toc/jpe/current" target="_blank">JPE</a>,<a href="https://www.journals.uchicago.edu/toc/jpe/current" target="_blank">JPE</a>, <a href="https://academic.oup.com/jeea/" targe="_blank">JEEA</a>, <a href="https://onlinelibrary.wiley.com/journal/14680262" targe="_blank">Econometrica</a> and the <a href="https://www.journals.uchicago.edu/toc/jaere/current" target="_blank">JAERE</a>. I guess these samples get larger if data availability policies become similar effective as those of the AEA journals.
 </p><p>
 If you want to analyse yourself the collected data, you can download the zipped SQLite databases using the following links:
 <ul>
